--- a/style.css
+++ b/style.css
@@ -236,9 +236,14 @@ body {
 
 footer {
     background-color: #FFA897;
-    display: flex;
-    justify-content: space-between;
-    padding: 30px 10px;
+}
+
+footer .footer-main {
+  max-width: 800px;
+  margin: 0 auto;
+  display: flex;
+  padding: 30px 10px;
+  justify-content: space-between;
 }
 
 .footer-column .owl {
