--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body {
     }
 }*/
 
-@media (max-device-width: 650px) {
+@media screen and (max-width: 650px), screen and (max-device-width: 650px) {
 
     .hamburger-button {
         display: block;
