--- a/style.css
+++ b/style.css
@@ -216,8 +216,8 @@ body {
     }
 
     .hamburger-button img {
-        width: 34px;
-        height: 32px;
+        width: 34pt;
+        height: 32pt;
     }
 
     .image-grid {
