--- a/style.css
+++ b/style.css
@@ -37,16 +37,16 @@ body {
 }
 
 .home .image-container {
-  width: 410px;
+    width: 410px;
 }
 
 .image-container img {
-  width: 100%;
-  height: auto;
+    width: 100%;
+    height: auto;
 }
 
 .subpage .image-container {
-  width: 205px;
+    width: 205px;
 }
 
 .navigation {
@@ -57,12 +57,14 @@ body {
     text-align: center;
 }
 
-.navigation .active {opacity: 0.5;}
+.navigation .active {
+    opacity: 0.5;
+}
 
 .navigation a {
     color: #FFA897;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 300;
     float: left;
     margin: 0 40px 20px 0;
@@ -73,25 +75,25 @@ body {
 }
 
 .subheader-container {
-  display: flex;
-  align-items: center;
-  margin: 20px 0 0;
-  clear: both;
+    display: flex;
+    align-items: center;
+    margin: 20px 0 0;
+    clear: both;
 }
 
 .subheader {
-  font-weight: bold;
-  font-size: 24px;
-  color: #FFA897;
-  text-transform: uppercase;
-  margin-right: 10px;
+    font-weight: bold;
+    font-size: 1.5rem;
+    color: #FFA897;
+    text-transform: uppercase;
+    margin-right: 10px;
 }
 
 .subheader-line {
-  flex-grow: 1;
-  border: none;
-  border-top: 2px solid #FFA897;
-  margin: 0;
+    flex-grow: 1;
+    border: none;
+    border-top: 2px solid #FFA897;
+    margin: 0;
 }
 
 .image-grid {
@@ -102,21 +104,21 @@ body {
 }
 
 .image-grid div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .image-title {
-  margin-top: 0px !important;
-  font-size: 16px;
-  text-align: center;
-  color: #ffa897;
-  text-decoration: none;
+    margin-top: 0px !important;
+    font-size: 1rem;
+    text-align: center;
+    color: #ffa897;
+    text-decoration: none;
 }
 
 .home .image-grid a {
-  margin: 0;
+    margin: 0;
 }
 
 .image-grid a {
@@ -131,81 +133,82 @@ body {
 }
 
 .about-section {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  margin-bottom: 50px;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    margin-bottom: 50px;
 }
 
 .summary {
-  position: relative;
-  background: #ffa897;
-  color: white;
-  font-size: 22px;
-  padding: 40px;
-  width: 60%;
-  margin: 20px auto 70px;
-  text-align: center;
-  font-weight: 600;
+    position: relative;
+    background: #ffa897;
+    color: white;
+    font-size: 1.375rem;
+    padding: 40px;
+    width: 60%;
+    margin: 20px auto 70px;
+    text-align: center;
+    font-weight: 600;
 }
 
 .person-name {
-  color: #FFA897;
-  font-size: 28px;
-  margin-bottom: 10px;
+    color: #FFA897;
+    font-size: 1.75rem;
+    margin-bottom: 10px;
 }
 
 .person-title {
-  color: #FFFFFF;
-  font-size: 18px;
-  margin-bottom: 20px;
+    color: #FFFFFF;
+    font-size: 1.125rem;
+    margin-bottom: 20px;
 }
 
 .person-bio {
-  color: #FFFFFF;
-  line-height: 1.5;
-  font-size: 19px;
+    color: #FFFFFF;
+    line-height: 1.5;
+    font-size: 1.1875rem;
 }
 
 .about-section .image-container {
-  flex: 0 0 38.2%;
-  margin-left: 20px;
-  position:relative;
-  padding-top: 61px;
-  float: left;
+    flex: 0 0 38.2%;
+    margin-left: 20px;
+    position: relative;
+    padding-top: 61px;
+    float: left;
 }
 
 .artist .about-section .image-container img {
-  position: relative;
-  width: 100%;
+    position: relative;
+    width: 100%;
 }
 
 .about-section .image-container img {
-  left:0;
-  right: 0;
-  height: auto;
-  position:absolute;
-  z-index: 1;
-  margin-top: 20px;
+    left: 0;
+    right: 0;
+    height: auto;
+    position: absolute;
+    z-index: 1;
+    margin-top: 20px;
 }
 
 .image-container svg {
-  position: absolute;
-  z-index: 0;
-  transform: rotate(288deg);
-  margin-top: -30px;
-  margin-left: -22px;
-  width: 120%;
+    position: absolute;
+    z-index: 0;
+    transform: rotate(288deg);
+    margin-top: -30px;
+    margin-left: -22px;
+    width: 120%;
 }
 
 .bio-text {
-  flex: 1;
-  margin-right: 20px;
+    flex: 1;
+    margin-right: 20px;
 }
 
 
 
-@media screen and (max-width: 650px), screen and (max-device-width: 650px) {
+@media screen and (max-width: 650px),
+screen and (max-device-width: 650px) {
 
     .hamburger-button {
         display: block;
@@ -250,7 +253,7 @@ body {
     .hidden-navigation a {
         display: block;
         color: #004749;
-        font-size: 24px;
+        font-size: 1.5rem;
         padding: 20px;
         text-decoration: none;
     }
@@ -317,22 +320,25 @@ body {
     }
 
     .about-section {
-      display: block;
+        display: block;
     }
 
     .bio-text {
-      display:block;
+        display: block;
     }
+
     .about-section .image-container img {
-      position:relative;
-      width: 80%;
+        position: relative;
+        width: 80%;
     }
+
     .image-container svg {
-      display: none;
+        display: none;
     }
+
     .about-section .image-container {
-      margin: 0 0 50px;
-      padding: 0;
+        margin: 0 0 50px;
+        padding: 0;
     }
 }
 
@@ -347,7 +353,7 @@ body {
     display: flex;
     align-items: center;
     color: #FFA897;
-    font-size: 18px;
+    font-size: 1.125rem;
     text-decoration: none;
     margin-left: 5px;
 }
@@ -394,7 +400,7 @@ footer .footer-main {
 
 .footer-column h3 {
     color: #FFFFFF;
-    font-size: 20px;
+    font-size: 1.25rem;
     margin: 0 0 10px;
 }
 
@@ -433,6 +439,6 @@ footer .footer-main {
 
 .footer-bottom p {
     color: #FFFFFF;
-    font-size: 14px;
+    font-size: .875rem;
     margin: 10px 0;
 }
